--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>QQ 音乐</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="shortcut icon" href="images/favicon.ico">
+  <title>QQ 音乐</title>
 </head>
+
 <body>
-    
+  <header id="header">
+    <h1>QQ 音乐</h1>
+    <img src="images/logo.png" alt="Logo" id="logo">
+    <div class="show-player">播放器</div>
+  </header>
 </body>
 </html>
