--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="scss/app.css">
   <link rel="shortcut icon" href="images/favicon.ico">
   <title>QQ 音乐</title>
 </head>
@@ -15,5 +16,10 @@
     <img src="images/logo.png" alt="Logo" id="logo">
     <div class="show-player">播放器</div>
   </header>
+  <div class="qq-slider" id="slider">
+  </div>
+  <script src="javascripts/slider.js"></script>
+  <script src="javascripts/app.js"></script>
 </body>
+
 </html>
