fetch and lazyload

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
   </nav>
   <div class="tab-contents">
     <div class="rec-view tab-content">
-      <div class="qq-slider" id="slider">
+      <div class="qq-slider" id="slider"></div>
+      <div class="radios">
+        <h2 class="title">电台</h2>
+        <div class="list"></div>
+      </div>
+      <div class="playlists">
+        <h2 class="title">热门歌单</h2>
+        <div class="list"></div>
       </div>
     </div>
     <div class="rank-view tab-content hide">
@@ -35,9 +42,10 @@
       搜索
     </div>
   </div>
-    <script src="javascripts/tab.js"></script>
-    <script src="javascripts/slider.js"></script>
-    <script src="javascripts/app.js"></script>
+  <script src="javascripts/tab.js"></script>
+  <script src="javascripts/slider.js"></script>
+  <script src="javascripts/lazyload.js"></script>
+  <script src="javascripts/app.js"></script>
 </body>
 
 </html>
