--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   </header>
   <nav class="navbar">
     <ul class="nav-list">
-      <li class="nav-item active" data-role="tab" data-view=".rec-view">推荐</li>
-      <li class="nav-item" data-role="tab" data-view=".rank-view">排行榜</li>
-      <li class="nav-item" data-role="tab" data-view=".search-view">搜索</li>
+      <li class="nav-item active" data-role="tab" data-view="#rec-view">推荐</li>
+      <li class="nav-item" data-role="tab" data-view="#rank-view">排行榜</li>
+      <li class="nav-item" data-role="tab" data-view="#search-view">搜索</li>
     </ul>
   </nav>
   <div class="tab-contents">
-    <div class="rec-view tab-content">
+    <div id="rec-view" class="tab-content">
       <div class="qq-slider" id="slider"></div>
       <div class="radios">
         <h2 class="title">电台</h2>
@@ -35,10 +35,11 @@
         <div class="list"></div>
       </div>
     </div>
-    <div class="rank-view tab-content hide">
-      排行版
+    <div id="rank-view" class="tab-content hide">
+      <ul class="toplist">
+      </ul>
     </div>
-    <div class="search-view tab-content hide">
+    <div id="search-view" class="tab-content hide">
       搜索
     </div>
   </div>
