--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
   <script src="javascripts/tab.js"></script>
   <script src="javascripts/slider.js"></script>
   <script src="javascripts/lazyload.js"></script>
-  <script src="scripts/search.js"></script>
+  <script src="javascripts/helper.js"></script>
+  <script src="javascripts/search.js"></script>
   <script src="javascripts/app.js"></script>
 </body>
 
