--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@
       </div>
     </div>
   </div>
+  <div id="player">
+    <div class="player-container">
+      <div class="player-header">
+        <img class="album-cover">
+        <div class="song-info">
+          <div class="song-name ellipsis"></div>
+          <div class="song-artist ellipsis"></div>
+        </div>
+        <span class="icon-action icon-play"></span>
+      </div>
+      <div class="player-lyrics"></div>
+      <div class="player-footer">
+        <div class="icon-list"></div>
+        <div class="progress"></div>
+        <div class="actions">
+          <a href="#" class="btn-download">下载这首歌</a>
+        </div>
+      </div>
+    </div>
+    <div class="player-background"></div>
+  </div>
   <script src="javascripts/tab.js"></script>
   <script src="javascripts/slider.js"></script>
   <script src="javascripts/lazyload.js"></script>
