--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
   <script src="javascripts/lazyload.js"></script>
   <script src="javascripts/helper.js"></script>
   <script src="javascripts/search.js"></script>
+  <script src="javascripts/progress_bar.js"></script>
+  <script src="javascripts/lyrics_player.js"></script>
+  <script src="javascripts/music_player.js"></script>
   <script src="javascripts/app.js"></script>
 </body>
 
