--- a/index.html
+++ b/index.html
@@ -77,15 +77,18 @@
     </div>
     <div class="player-background"></div>
   </div>
-  <script src="javascripts/tab.js"></script>
-  <script src="javascripts/slider.js"></script>
-  <script src="javascripts/lazyload.js"></script>
-  <script src="javascripts/helper.js"></script>
-  <script src="javascripts/search.js"></script>
-  <script src="javascripts/progress_bar.js"></script>
-  <script src="javascripts/lyrics_player.js"></script>
-  <script src="javascripts/music_player.js"></script>
-  <script src="javascripts/app.js"></script>
+  <script type="module" src="javascripts/tab.js"></script>
+  <script type="module" src="javascripts/slider.js"></script>
+  <script type="module" src="javascripts/constants.js"></script>
+  <script type="module" src="javascripts/lazyload.js"></script>
+  <script type="module" src="javascripts/recommend.js"></script>
+  <script type="module" src="javascripts/toplist.js"></script>
+  <script type="module" src="javascripts/helpers.js"></script>
+  <script type="module" src="javascripts/search.js"></script>
+  <script type="module" src="javascripts/progress_bar.js"></script>
+  <script type="module" src="javascripts/lyrics_player.js"></script>
+  <script type="module" src="javascripts/music_player.js"></script>
+  <script type="module" src="javascripts/app.js"></script>
 </body>
 
 </html>
