--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="scss/app.css">
+  <link rel="stylesheet" href="dist/app.css">
   <link rel="shortcut icon" href="images/favicon.ico">
   <title>QQ 音乐</title>
 </head>
@@ -77,7 +77,7 @@
     </div>
     <div class="player-background"></div>
   </div>
-  <script src="dist/app.js"></script>
+<script src="dist/app.js"></script>
 </body>
 
 </html>
