--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li class="nav-item" data-role="tab" data-view="#search-view">搜索</li>
     </ul>
   </nav>
-  <div class="tab-contents hide">
+  <div class="tab-contents ">
     <div id="rec-view" class="tab-content">
       <div class="qq-slider" id="slider"></div>
       <div class="radios">
@@ -77,7 +77,7 @@
     </div>
     <div class="player-background"></div>
   </div>
-  <div class="loading_box">
+  <div class="loading_box hide">
     <div class="loading">
       <img src="//y.gtimg.cn/mediastyle/mobile/yqq_v5/img/loading.gif?max_age=2592000">
       <p>页面正在努力加载中
