调整轮播动画

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li class="nav-item" data-role="tab" data-view="#search-view">搜索</li>
     </ul>
   </nav>
-  <div class="tab-contents hide">
+  <div class="tab-contents">
     <div id="rec-view" class="tab-content">
       <div class="qq-slider" id="slider"></div>
       <div class="radios">
