--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="search-cancel hide">取消</div>
       </div>
       <div class="record-keys hide">
-                
+
       </div>
       <div class="search-results">
         <ul class="song-list"></ul>
@@ -98,20 +98,7 @@
   <script>
     !window.fetch && document.write('<script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js"><\/script>')
   </script>
-  <script type="module" src="javascripts/tab.js"></script>
-  <script type="module" src="javascripts/slider.js"></script>
-  <script type="module" src="javascripts/constants.js"></script>
-  <script type="module" src="javascripts/lazyload.js"></script>
-  <script type="module" src="javascripts/recommend.js"></script>
-  <script type="module" src="javascripts/toplist.js"></script>
-  <script type="module" src="javascripts/helpers.js"></script>
-  <script type="module" src="javascripts/search.js"></script>
-  <script type="module" src="javascripts/progress_bar.js"></script>
-  <script type="module" src="javascripts/lyrics_player.js"></script>
-  <script type="module" src="javascripts/music_player.js"></script>
-  <script type="module" src="javascripts/loading.js"></script>
-  <script type="module" src="javascripts/hotkey.js"></script>
-  <script type="module" src="javascripts/app.js"></script>
+  <script src="dist/app.js"></script>
 </body>
 
 </html>
