--- a/index.html
+++ b/index.html
@@ -98,7 +98,20 @@
   <script>
     !window.fetch && document.write('<script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js"><\/script>')
   </script>
-<script src="dist/app.js"></script>
+  <script type="module" src="javascripts/tab.js"></script>
+  <script type="module" src="javascripts/slider.js"></script>
+  <script type="module" src="javascripts/constants.js"></script>
+  <script type="module" src="javascripts/lazyload.js"></script>
+  <script type="module" src="javascripts/recommend.js"></script>
+  <script type="module" src="javascripts/toplist.js"></script>
+  <script type="module" src="javascripts/helpers.js"></script>
+  <script type="module" src="javascripts/search.js"></script>
+  <script type="module" src="javascripts/loading.js"></script>
+  <script type="module" src="javascripts/hotkey.js"></script>
+  <script type="module" src="javascripts/progress_bar.js"></script>
+  <script type="module" src="javascripts/lyrics_player.js"></script>
+  <script type="module" src="javascripts/music_player.js"></script>
+  <script type="module" src="javascripts/app.js"></script>
 </body>
 
 </html>
